--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,16 +28,29 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install and Build
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Clean Install Dependencies
         run: |
           npm ci
+          npm cache clean --force
+
+      - name: Clean and Build
+        run: |
+          rm -rf dist
           npm run build
         env:
           VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
+          clean: true
           branch: gh-pages
+          single-commit: true
